--- a/Content/PySim/3_recap.ipynb
+++ b/Content/PySim/3_recap.ipynb
@@ -146,7 +146,7 @@
    "metadata": {},
    "source": [
     "### Particle class\n",
-    "Ons `ParticleClass` definieert van een deeltje de massa $m$, snelheid $v$, positie $r$, en straal $R$.\n",
+    "Onze `ParticleClass` definieert van een deeltje de massa $m$, snelheid $v$, positie $r$, en straal $R$.\n",
     "De positie moet per tijdstap bepaald worden. \n",
     "\n",
     "Nieuw aan `ParticleClass` zijn twee properties, nl. `momentum` en `energy`.\n",
