--- a/Content/Labs/cwater.ipynb
+++ b/Content/Labs/cwater.ipynb
@@ -94,7 +94,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hier de data en de analyse"
+    "# Hier de data en de analyse\n",
+    "import numpy as np\n",
+    "import matplotlib as plt\n",
+    "\n",
+    "\n",
+    "T = np.array([21.4, 21.4, 21.5, 21.5, 21.6,21.7,  21.8, 21.9, 22.0, 22.0, 22.1, 22.2, 22.3, 22.4, 22.5, 22.6, 22.7, 22.8, 22.8, 22.8, 22.9, 23.0, 23.1, 23.2, 23.3, 23.4, 23.5, 23.6, 23.7, 23.8, 23.9, 24.0, 24.0, 24.1, 24.2, 24.3, 24.4, 24.5, 24.6, 24.7, 24.8, 24.9, 25.0, 25.0, 25.1, 25.2, 25.3, 25.4, 25.5, 25.6, 25.7, 25.8, 25.9, 26.0, 26.1, 26.2, 26.3, 26.4, 26.5, 26.6, 26.7])\n",
+    "t = np.array([0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100, 105, 110, 115, 120, 125, 130, 135, 140, 145, 150, 155, 160, 165, 170, 175, 180, 185, 190, 195, 200, 205, 210, 215, 220, 225, 230, 235, 240, 245, 250, 255, 260, 265, 270, 275, 280, 285, 290, 295, 300])"
    ]
   },
   {
