Final commit 26 november

--- a/Content/Labs/cwater.ipynb
+++ b/Content/Labs/cwater.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "c6329bbb",
    "metadata": {},
    "outputs": [
@@ -133,18 +133,7 @@
     "plt.xlabel('tijd')\n",
     "plt.ylabel('temperatuur')\n",
     "plt.savefig(\"cwater.png\", dpi=450)\n",
-    "plt.show()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
