--- a/Content/Labs/koelbuis.ipynb
+++ b/Content/Labs/koelbuis.ipynb
@@ -320,7 +320,7 @@
     "# Discussie en conclusie\n",
     "\n",
     "\n",
-    "#your code/answer\n"
+    "De hoeveelheid convectie in de afgedichte buis is minder dan in de open buis, zo blijkt ook uit onze waardes. De rest is straling en geleiding."
    ]
   }
  ],
