--- a/Content/Labs/Verdamping.ipynb
+++ b/Content/Labs/Verdamping.ipynb
@@ -39,6 +39,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Het verschil tussen de hoeveelheid energie is: 4335.841197535032\n"
+     ]
     }
    ],
    "source": [
@@ -49,16 +56,14 @@
     "def function_fit(x,a,b):\n",
     "    return a*x+b\n",
     "\n",
+    "massa_water_eind = 1274.9 - 820.8\n",
+    "\n",
     "\n",
     "\n",
     "data = np.genfromtxt('metingen/tempmetingen.csv', delimiter=';')\n",
     "\n",
     "t = data[:,0]\n",
     "T = data[:,1]\n",
-    "\n",
-    "m_water = 1292.9 - 820.8\n",
-    "\n",
-    "\n",
     "\n",
     "val, cov = curve_fit(function_fit, t[0:20], T[0:20])\n",
     "\n",
@@ -68,16 +73,21 @@
     "\n",
     "\n",
     "plt.plot(t,T)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "verschil_vanaf_fit = y_fit[999] - T[60] # verschil van 23 graden tov verwacht zonder verdamping\n",
+    "m_water_verloren = 1292.9 - 1274.9 #g\n",
+    "\n",
+    "\n",
+    "L_water = 2260 #J/g\n",
+    "c_water = 4.18 #J/(gK)\n",
+    "\n",
+    "Q_verdamping = m_water_verloren * L_water\n",
+    "Q_opwarming = verschil_vanaf_fit * c_water * massa_water_eind\n",
+    "\n",
+    "print(\"Het verschil tussen de hoeveelheid energie is:\", Q_opwarming - Q_verdamping)\n",
+    "print(\"Dit verschil is hoogstwaarschijnlijk te verklaren door het warmteverlies naar de omgeving.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5681224",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
